<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <DUT Name="ST_Event" Id="{a9872e17-e7e2-4afc-8a4b-f359e869de21}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	eEventType : E_EventType;
	eEventSeverity : TcEventSeverity;
	nEventIdentity : UDINT;
	sEventText: STRING(255);
	dtTimestamp: DATE_AND_TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>